// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create a AddressEdit 1`] = `
<div class="buri-address-edit">
  <div class="buri-address-edit__fields">
    <div class="buri-cell buri-field">
      <div class="buri-cell__title buri-field__label"><span>姓名</span></div>
      <div class="buri-cell__value">
        <div class="buri-field__body"><input type="text" placeholder="收货人姓名" class="buri-field__control"></div>
      </div>
    </div>
    <div class="buri-cell buri-field">
      <div class="buri-cell__title buri-field__label"><span>电话</span></div>
      <div class="buri-cell__value">
        <div class="buri-field__body"><input type="tel" placeholder="收货人手机号" class="buri-field__control"></div>
      </div>
    </div>
    <div role="button" tabindex="0" class="buri-cell buri-cell--clickable buri-field">
      <div class="buri-cell__title buri-field__label"><span>地区</span></div>
      <div class="buri-cell__value">
        <div class="buri-field__body"><input type="text" placeholder="选择省 / 市 / 区" readonly="readonly" class="buri-field__control">
          <div class="buri-field__right-icon"><i class="buri-icon buri-icon-arrow">
              <!----></i></div>
        </div>
      </div>
    </div>
    <div class="buri-cell buri-address-edit-detail">
      <div class="buri-cell__value buri-cell__value--alone">
        <div class="buri-cell buri-field">
          <div class="buri-cell__title buri-field__label"><span>详细地址</span></div>
          <div class="buri-cell__value">
            <div class="buri-field__body"><textarea rows="1" placeholder="街道门牌、楼层房间号等信息" class="buri-field__control"></textarea></div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="buri-address-edit__buttons"><button class="buri-button buri-button--danger buri-button--normal buri-button--block buri-button--round"><span class="buri-button__text">保存</span></button></div>
</div>
`;

exports[`create a AddressEdit with props 1`] = `
<div class="buri-address-edit">
  <div class="buri-address-edit__fields">
    <div class="buri-cell buri-field">
      <div class="buri-cell__title buri-field__label"><span>姓名</span></div>
      <div class="buri-cell__value">
        <div class="buri-field__body"><input type="text" placeholder="收货人姓名" class="buri-field__control"></div>
      </div>
    </div>
    <div class="buri-cell buri-field">
      <div class="buri-cell__title buri-field__label"><span>电话</span></div>
      <div class="buri-cell__value">
        <div class="buri-field__body"><input type="tel" placeholder="收货人手机号" class="buri-field__control"></div>
      </div>
    </div>
    <div role="button" tabindex="0" class="buri-cell buri-cell--clickable buri-field">
      <div class="buri-cell__title buri-field__label"><span>地区</span></div>
      <div class="buri-cell__value">
        <div class="buri-field__body"><input type="text" placeholder="选择省 / 市 / 区" readonly="readonly" class="buri-field__control">
          <div class="buri-field__right-icon"><i class="buri-icon buri-icon-arrow">
              <!----></i></div>
        </div>
      </div>
    </div>
    <div class="buri-cell buri-address-edit-detail">
      <div class="buri-cell__value buri-cell__value--alone">
        <div class="buri-cell buri-field">
          <div class="buri-cell__title buri-field__label"><span>详细地址</span></div>
          <div class="buri-cell__value">
            <div class="buri-field__body"><textarea rows="1" placeholder="街道门牌、楼层房间号等信息" class="buri-field__control"></textarea></div>
          </div>
        </div>
      </div>
    </div>
    <div class="buri-cell buri-field">
      <div class="buri-cell__title buri-field__label"><span>邮政编码</span></div>
      <div class="buri-cell__value">
        <div class="buri-field__body"><input type="tel" placeholder="邮政编码" class="buri-field__control"></div>
      </div>
    </div>
  </div>
  <div class="buri-cell buri-cell--center buri-switch-cell buri-address-edit__default">
    <div class="buri-cell__title"><span>设为默认收货地址</span></div>
    <div class="buri-cell__value">
      <div role="switch" aria-checked="true" class="buri-switch buri-switch--on" style="font-size: 24px;">
        <div class="buri-switch__node"></div>
      </div>
    </div>
  </div>
  <div class="buri-address-edit__buttons"><button class="buri-button buri-button--danger buri-button--normal buri-button--block buri-button--round"><span class="buri-button__text">保存</span></button></div>
</div>
`;

exports[`set-default 1`] = `
<div class="buri-address-edit">
  <div class="buri-address-edit__fields">
    <div class="buri-cell buri-field">
      <div class="buri-cell__title buri-field__label"><span>姓名</span></div>
      <div class="buri-cell__value">
        <div class="buri-field__body"><input type="text" placeholder="收货人姓名" class="buri-field__control"></div>
      </div>
    </div>
    <div class="buri-cell buri-field">
      <div class="buri-cell__title buri-field__label"><span>电话</span></div>
      <div class="buri-cell__value">
        <div class="buri-field__body"><input type="tel" placeholder="收货人手机号" class="buri-field__control"></div>
      </div>
    </div>
    <div role="button" tabindex="0" class="buri-cell buri-cell--clickable buri-field">
      <div class="buri-cell__title buri-field__label"><span>地区</span></div>
      <div class="buri-cell__value">
        <div class="buri-field__body"><input type="text" placeholder="选择省 / 市 / 区" readonly="readonly" class="buri-field__control">
          <div class="buri-field__right-icon"><i class="buri-icon buri-icon-arrow">
              <!----></i></div>
        </div>
      </div>
    </div>
    <div class="buri-cell buri-address-edit-detail">
      <div class="buri-cell__value buri-cell__value--alone">
        <div class="buri-cell buri-field">
          <div class="buri-cell__title buri-field__label"><span>详细地址</span></div>
          <div class="buri-cell__value">
            <div class="buri-field__body"><textarea rows="1" placeholder="街道门牌、楼层房间号等信息" class="buri-field__control"></textarea></div>
          </div>
        </div>
      </div>
    </div>
    <div class="buri-cell buri-field">
      <div class="buri-cell__title buri-field__label"><span>邮政编码</span></div>
      <div class="buri-cell__value">
        <div class="buri-field__body"><input type="tel" placeholder="邮政编码" class="buri-field__control"></div>
      </div>
    </div>
  </div>
  <div class="buri-cell buri-cell--center buri-switch-cell buri-address-edit__default">
    <div class="buri-cell__title"><span>设为默认收货地址</span></div>
    <div class="buri-cell__value">
      <div role="switch" aria-checked="false" class="buri-switch" style="font-size: 24px;">
        <div class="buri-switch__node"></div>
      </div>
    </div>
  </div>
  <div class="buri-address-edit__buttons"><button class="buri-button buri-button--danger buri-button--normal buri-button--block buri-button--round"><span class="buri-button__text">保存</span></button></div>
</div>
`;

exports[`show area component 1`] = `
<div class="buri-address-edit">
  <div class="buri-address-edit__fields">
    <div class="buri-cell buri-field">
      <div class="buri-cell__title buri-field__label"><span>姓名</span></div>
      <div class="buri-cell__value">
        <div class="buri-field__body"><input type="text" placeholder="收货人姓名" class="buri-field__control"></div>
      </div>
    </div>
    <div class="buri-cell buri-field">
      <div class="buri-cell__title buri-field__label"><span>电话</span></div>
      <div class="buri-cell__value">
        <div class="buri-field__body"><input type="tel" placeholder="收货人手机号" class="buri-field__control"></div>
      </div>
    </div>
    <div role="button" tabindex="0" class="buri-cell buri-cell--clickable buri-field">
      <div class="buri-cell__title buri-field__label"><span>地区</span></div>
      <div class="buri-cell__value">
        <div class="buri-field__body"><input type="text" placeholder="选择省 / 市 / 区" readonly="readonly" class="buri-field__control">
          <div class="buri-field__right-icon"><i class="buri-icon buri-icon-arrow">
              <!----></i></div>
        </div>
      </div>
    </div>
    <div class="buri-cell buri-address-edit-detail">
      <div class="buri-cell__value buri-cell__value--alone">
        <div class="buri-cell buri-field">
          <div class="buri-cell__title buri-field__label"><span>详细地址</span></div>
          <div class="buri-cell__value">
            <div class="buri-field__body"><textarea rows="1" placeholder="街道门牌、楼层房间号等信息" class="buri-field__control" style="height: auto;"></textarea></div>
          </div>
        </div>
      </div>
    </div>
    <div class="buri-cell buri-field">
      <div class="buri-cell__title buri-field__label"><span>邮政编码</span></div>
      <div class="buri-cell__value">
        <div class="buri-field__body"><input type="tel" placeholder="邮政编码" class="buri-field__control"></div>
      </div>
    </div>
  </div>
  <div class="buri-cell buri-cell--center buri-switch-cell buri-address-edit__default">
    <div class="buri-cell__title"><span>设为默认收货地址</span></div>
    <div class="buri-cell__value">
      <div role="switch" aria-checked="true" class="buri-switch buri-switch--on" style="font-size: 24px;">
        <div class="buri-switch__node"></div>
      </div>
    </div>
  </div>
  <div class="buri-address-edit__buttons"><button class="buri-button buri-button--danger buri-button--normal buri-button--block buri-button--round"><span class="buri-button__text">保存</span></button></div>
</div>
`;

exports[`show area component 2`] = `
<div class="buri-address-edit">
  <div class="buri-address-edit__fields">
    <div class="buri-cell buri-field">
      <div class="buri-cell__title buri-field__label"><span>姓名</span></div>
      <div class="buri-cell__value">
        <div class="buri-field__body"><input type="text" placeholder="收货人姓名" class="buri-field__control"></div>
      </div>
    </div>
    <div class="buri-cell buri-field">
      <div class="buri-cell__title buri-field__label"><span>电话</span></div>
      <div class="buri-cell__value">
        <div class="buri-field__body"><input type="tel" placeholder="收货人手机号" class="buri-field__control"></div>
      </div>
    </div>
    <div role="button" tabindex="0" class="buri-cell buri-cell--clickable buri-field">
      <div class="buri-cell__title buri-field__label"><span>地区</span></div>
      <div class="buri-cell__value">
        <div class="buri-field__body"><input type="text" placeholder="选择省 / 市 / 区" readonly="readonly" class="buri-field__control">
          <div class="buri-field__right-icon"><i class="buri-icon buri-icon-arrow">
              <!----></i></div>
        </div>
      </div>
    </div>
    <div class="buri-cell buri-address-edit-detail">
      <div class="buri-cell__value buri-cell__value--alone">
        <div class="buri-cell buri-field">
          <div class="buri-cell__title buri-field__label"><span>详细地址</span></div>
          <div class="buri-cell__value">
            <div class="buri-field__body"><textarea rows="1" placeholder="街道门牌、楼层房间号等信息" class="buri-field__control" style="height: auto;"></textarea></div>
          </div>
        </div>
      </div>
    </div>
    <div class="buri-cell buri-field">
      <div class="buri-cell__title buri-field__label"><span>邮政编码</span></div>
      <div class="buri-cell__value">
        <div class="buri-field__body"><input type="tel" placeholder="邮政编码" class="buri-field__control"></div>
      </div>
    </div>
  </div>
  <div class="buri-cell buri-cell--center buri-switch-cell buri-address-edit__default">
    <div class="buri-cell__title"><span>设为默认收货地址</span></div>
    <div class="buri-cell__value">
      <div role="switch" aria-checked="true" class="buri-switch buri-switch--on" style="font-size: 24px;">
        <div class="buri-switch__node"></div>
      </div>
    </div>
  </div>
  <div class="buri-address-edit__buttons"><button class="buri-button buri-button--danger buri-button--normal buri-button--block buri-button--round"><span class="buri-button__text">保存</span></button></div>
</div>
`;

exports[`valid area placeholder confirm 1`] = `
<div class="buri-address-edit">
  <div class="buri-address-edit__fields">
    <div class="buri-cell buri-field">
      <div class="buri-cell__title buri-field__label"><span>姓名</span></div>
      <div class="buri-cell__value">
        <div class="buri-field__body"><input type="text" placeholder="收货人姓名" class="buri-field__control"></div>
      </div>
    </div>
    <div class="buri-cell buri-field">
      <div class="buri-cell__title buri-field__label"><span>电话</span></div>
      <div class="buri-cell__value">
        <div class="buri-field__body"><input type="tel" placeholder="收货人手机号" class="buri-field__control"></div>
      </div>
    </div>
    <div role="button" tabindex="0" class="buri-cell buri-cell--clickable buri-field">
      <div class="buri-cell__title buri-field__label"><span>地区</span></div>
      <div class="buri-cell__value">
        <div class="buri-field__body"><input type="text" placeholder="选择省 / 市 / 区" readonly="readonly" class="buri-field__control">
          <div class="buri-field__right-icon"><i class="buri-icon buri-icon-arrow">
              <!----></i></div>
        </div>
      </div>
    </div>
    <div class="buri-cell buri-address-edit-detail">
      <div class="buri-cell__value buri-cell__value--alone">
        <div class="buri-cell buri-field">
          <div class="buri-cell__title buri-field__label"><span>详细地址</span></div>
          <div class="buri-cell__value">
            <div class="buri-field__body"><textarea rows="1" placeholder="街道门牌、楼层房间号等信息" class="buri-field__control" style="height: auto;"></textarea></div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="buri-address-edit__buttons"><button class="buri-button buri-button--danger buri-button--normal buri-button--block buri-button--round"><span class="buri-button__text">保存</span></button></div>
</div>
`;
